--- a/locales/en.json
+++ b/locales/en.json
@@ -104,7 +104,7 @@
         },
         "delete": {
             "title": "Delete",
-            "description": "Remove this from the map.",
+            "description": "Delete object permanently.",
             "annotation": {
                 "point": "Deleted a point.",
                 "vertex": "Deleted a node from a way.",
@@ -1061,6 +1061,9 @@
             "sport_ice": {
                 "label": "Sport"
             },
+            "sport_racing": {
+                "label": "Sport"
+            },
             "structure": {
                 "label": "Structure",
                 "placeholder": "Unknown",
@@ -1280,6 +1283,10 @@
             "amenity/boat_rental": {
                 "name": "Boat Rental",
                 "terms": ""
+            },
+            "amenity/bureau_de_change": {
+                "name": "Currency Exchange",
+                "terms": "bureau de change,money changer"
             },
             "amenity/bus_station": {
                 "name": "Bus Station",
@@ -2041,6 +2048,10 @@
                 "name": "Primary Link",
                 "terms": "ramp,on ramp,off ramp"
             },
+            "highway/raceway": {
+                "name": "Motor Raceway",
+                "terms": "auto*,race*,nascar"
+            },
             "highway/residential": {
                 "name": "Residential Road",
                 "terms": ""
@@ -2329,6 +2340,10 @@
                 "name": "Playground",
                 "terms": "jungle gym,play area"
             },
+            "leisure/running_track": {
+                "name": "Running Track",
+                "terms": ""
+            },
             "leisure/slipway": {
                 "name": "Slipway",
                 "terms": ""
@@ -2346,7 +2361,7 @@
                 "terms": ""
             },
             "leisure/track": {
-                "name": "Race Track",
+                "name": "Racetrack (non-Motorsport)",
                 "terms": ""
             },
             "line": {
