--- a/locales/ru.json
+++ b/locales/ru.json
@@ -572,6 +572,9 @@
             "barrier": {
                 "label": "Тип"
             },
+            "bench": {
+                "label": "Скамейка"
+            },
             "bicycle_parking": {
                 "label": "Тип"
             },
@@ -1697,7 +1700,7 @@
                 "name": "Мастерская часовщика",
                 "terms": "часовщик"
             },
-            "craft/confectionary": {
+            "craft/confectionery": {
                 "name": "Мастерская кондитера"
             },
             "craft/dressmaker": {
